# rere_daisha_ros

./: CMakeLists.txt  package.xml  pyproject.toml
config/: ransac_params.yaml
include/rere_daisha_ros/: ransac_ball.hpp  ransac_ball_node.hpp
launch/: ball_detect.launch.py  sim_inrof_field.launch.py  spawn_random_balls.launch.py
scripts/: yolo_test.py
src/: debug.cpp  ransac_ball.cpp  ransac_ball_node.cpp
src/rere_daisha_ros/: __init__.py  yolo_test.py
worlds/: inrof_field.sdf
