[project]
name = "rere-daisha-ros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aky", email = "akiyugata271@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.202",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
